Spacing in footer fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+main {
+  background-color: #d4cece;
+  background-image: linear-gradient(180deg, #d4cece 0%, #c5c1c2 49%, #dedada 100%);
+}
+
 .justified {
   text-align: justify;
 }
