--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,3 +1,8 @@
+main {
+	background-color: #d4cece;
+	background-image: linear-gradient(180deg, #d4cece 0%, #c5c1c2 49%, #dedada 100%);
+}
+
 .justified {
 	text-align: justify;
 }
